For #10802, fixes and improvements

--- a/info.yml
+++ b/info.yml
@@ -57,8 +57,8 @@ configuration:
 requires_shotgun_fields:
 
 # More verbose description of this item
-display_name: "Shotgun Engine for Premiere CC"
-description: "Shotgun Integration for Premiere CC"
+display_name: "ShotGrid Engine for Premiere CC"
+description: "ShotGrid Integration for Premiere CC"
 
 # Required minimum versions for this item to run
 requires_shotgun_version:
